--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
                 grid-template-columns: repeat(1,1fr);
             }
         }
-        @media screen and (min-width:576.01px) and (max-width:768px) {
+        @media screen and (min-width:576.01px) and (max-width:992px) {
             .container{
                 grid-template-columns: repeat(2, 1fr);
             }
         }
-        @media screen and (min-width:768.01px) and (max-width:992px) {
+        /* @media screen and (min-width:768.01px) and (max-width:992px) {
             .container{
                 grid-template-columns: repeat(3, 1fr);
             }
-        }
+        } */
     </style>
 </head>
 <body>
